k8s/03-db-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-writer
  namespace: perps-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-writer
  template:
    metadata:
      labels:
        app: db-writer
    spec:
      containers:
        - name: db-writer
          image: tannnu13/perps-v2-db-writer:v1
