k8s/04-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  namespace: perps-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: tannnu13/perps-v2-engine:v2
