k8s/07-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: perps-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: tannnu13/perps-v2-scheduler:v1
