k8s/price-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-poller
  namespace: perps-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-poller
  template:
    metadata:
      labels:
        app: price-poller
    spec:
      containers:
        - name: price-poller
          image: tannnu13/price-poller:v1
