k8s/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perps-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: perps-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tannnu13/perps-v2-backend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: perps-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
